--- a/src/app/programdsl/component/program/program.component.html
+++ b/src/app/programdsl/component/program/program.component.html
@@ -199,10 +199,10 @@
 
                 <div class="row legend Workshop">Workshop</div>
                 <div class="row legend Tutorial">Tutorial</div>
-<!--                <div class="row legend Poster">Poster</div>
-                <div class="row legend DoctoralSymposium">Symposium</div>
-                <div class="row legend DoctoralSymposium">Doctoral Symposium</div>-->
-                <!--<div class="row legend EducatorSymposium">Educator Symposium</div>
+                <div class="row legend Poster">Poster</div>
+<!--                <div class="row legend DoctoralSymposium">Symposium</div>-->
+                <div class="row legend DoctoralSymposium">Doctoral Symposium</div>
+                <div class="row legend EducatorSymposium">Educator Symposium</div>
                 <div class="row legend SRC">Student Research Competition</div>
 
 
@@ -212,7 +212,7 @@
                 <div class="row legend Meeting">Meeting</div>
 
 
-                <div class="row legend Lunch">Lunch</div>-->
+                <div class="row legend Lunch">Lunch</div>
                 <div class="row legend Meeting">Steering Comitee</div>
                 <div class="row legend Reception">Virtual Reception</div>
                 <div class="row legend CoffeeBreak">Coffee Break</div>
