--- a/src/app/navigation/containers/footer/footer.component.html
+++ b/src/app/navigation/containers/footer/footer.component.html
@@ -30,7 +30,7 @@
                     </li>
 
                 </ul>
-                <p class="copyright text-muted">Copyright © Olivier Barais 2021</p>
+                <p class="copyright text-muted">Copyright © <a target="_blank" href="https://www.diverse-team.fr/">INRIA DiverSE Team 2021</a></p>
             </div>
         </div>
     </div>
