--- a/src/app/mulder/containers/home/home.component.html
+++ b/src/app/mulder/containers/home/home.component.html
@@ -4,55 +4,66 @@
     </mulder-main-header>
 <!--a DSL-based Jamstack-compliant modern sites generator on top of Scully (Angular)"-->
 
+
+
+
     <section id="research-axes" class="py-5 bg-secondary text-light">
         <div class="content">
             <div class="container">
-                <div class="row justify-content-center align-items-stretch items">
+                <div class="d-flex row justify-content-center align-items-start items">
                     <div class="icon-item col-md-3 d-flex flex-column">
-                        <div class="col justify-content-between flex-column header">
-                            <div class="row image justify-content-center align-items-center">
+                      <div class="col d-flex align-items-start justify-content-center align-content-center">
+                        <div class="row image justify-content-center">
                                 <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "project-diagram"]'
                                     stackItemSize="4x"></fa-icon>
                             </div>
-                            <div class="icon-label row justify-content-center text-center">
-                                <h4 class="mb-3 text-light">Embrace Web Component (<a  style="color: white;text-decoration: underline;" target="_blank" href="https://angular.io/">angular</a>)</h4>
+                        </div>
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="icon-label row text-center">
+                              <h4 class="mb-3 text-light">Embrace Web Component (<a  style="color: white;text-decoration: underline;" target="_blank" href="https://angular.io/">angular</a>)</h4>
                             </div>
                         </div>
                     </div>
 
                     <div class="icon-item col-md-3 d-flex flex-column">
-                        <div class="col justify-content-between flex-column header">
-                            <div class="row image justify-content-center align-items-center">
-                                <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "infinity"]' stackItemSize="4x">
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="row image justify-content-center">
+                         <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "infinity"]' stackItemSize="4x">
                                 </fa-icon>
                             </div>
-                            <div class="icon-label row justify-content-center text-center">
-                                <h4 class="mb-3 text-light">Embrace <a style="color: white;text-decoration: underline;" target="_blank" href="https://jamstack.org/">Jamstack</a> Toolchain</h4>
+                        </div>
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="icon-label row text-center">
+                              <h4 class="mb-3 text-light">Embrace <a style="color: white;text-decoration: underline;" target="_blank" href="https://jamstack.org/">Jamstack</a> Toolchain</h4>
                                 <p style="margin: 0px 0px; text-align: justify;">a set of plugins and components for <a style="color: white;" target="_blank" href="https://scully.io">scully.io</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="icon-item col-md-3 d-flex flex-column">
-                        <div class="col justify-content-between flex-column header">
-                            <div class="row image justify-content-center align-items-center">
-                                <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "sliders-h"]' stackItemSize="4x">
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="row image justify-content-center">
+                           <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "sliders-h"]' stackItemSize="4x">
                                 </fa-icon>
                             </div>
-                            <div class="icon-label row justify-content-center text-center">
-                                <h4 class="mb-3 text-light">Embrace flexibility</h4>
+                        </div>
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="icon-label row text-center">
+                              <h4 class="mb-3 text-light">Embrace flexibility</h4>
                                 <p style="margin: 0px 0px; text-align: justify;"> Let developers configure if the datasource must be consumed at compiled time (to render static html) or at runtime</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="icon-item col-md-3 d-flex flex-column">
-                        <div class="col justify-content-between flex-column header">
-                            <div class="row image justify-content-center align-items-center">
-                                <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "check-double"]' stackItemSize="4x">
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="row image justify-content-center">
+                          <fa-icon class="fa-4x fa-inverse" [icon]='["fas", "check-double"]' stackItemSize="4x">
                                 </fa-icon>
                             </div>
-                            <div class="icon-label row justify-content-center text-center">
-                                <h4 class="mb-3 text-light">Extend the idea of Markup and Embrace DSL</h4>
+                        </div>
+                        <div class="col d-flex align-items-start justify-content-center align-content-center">
+                            <div class="icon-label row text-center">
+                              <h4 class="mb-3 text-light">Extend the idea of Markup and Embrace DSL</h4>
 
                                     <p style="margin: 0px 0px; text-align: justify;">
                                     Use <a style="color: white;" target="_blank" href="https://gitlab.com/">gitlab</a>, <a style="color: white;" target="_blank" href="https://github.com/">github</a>,
